Closed Bug 571981 Opened 15 years ago Closed 14 years ago

"ASSERTION: Got the wrong answer from the custom method call" with frameset root

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b1

People

(Reporter: jruderman, Assigned: peterv)

References

Details

(Keywords: assertion, html5, testcase)

Attachments

(3 files, 1 obsolete file)

Attached file testcase
###!!! ASSERTION: Got the wrong answer from the custom method call!: 'NS_SUCCEEDED(debug_rv) == NS_SUCCEEDED(rv) && xpc_qsSameResult(debug_result, result)', file dom_quickstubs.cpp, line 13553 (gdb) p debug_rv $1 = 2147500034 (gdb) p rv $2 = 0
Attached file stack trace
debug_rv there is NS_ERROR_NO_INTERFACE. And the reason is that nsHTMLDocument::GetBody will happily return the first element with tagname "frameset" it finds, no matter what the namespace, in IsHTML() documents. However the COM getter will fail to QI this to nsIDOMHTMLElement, obviously. The testcase should be ending up with a null body, but isn't, so this is a correctness bug. Presumably regression from bug 560462. Can we just use the GetElementsByTagNameNS call there for IsHTML()? Seems like we should be able to.
Blocks: 560462
blocking2.0: --- → ?
Attached patch v1 (obsolete) — Splinter Review
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Can we add a correctness test too (testing that document.body is null there)?
s/too/instead?
Attached patch v1Splinter Review
Attachment #451580 - Attachment is obsolete: true
Attachment #451958 - Flags: review?(bzbarsky)
Comment on attachment 451958 [details] [diff] [review] v1 >+ isnot(elem, null, >+ "HTMLDocument.body should be an html element with nodeName 'BODY' " + >+ "and a child of the documentElement"); That doesn't make sense; there's no doc.body in sight there. Should there be a separate assert that is(elem, doc.body)? r=bzbarsky with that.
Attachment #451958 - Flags: review?(bzbarsky) → review+
Ugh, that what I wanted to assert, yes.
Status: ASSIGNED → RESOLVED
blocking2.0: ? → ---
Closed: 14 years ago
OS: Mac OS X → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3b1
Keywords: html5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: