Fix for bug 571981 ("ASSERTION: Got the wrong answer from the custom method call" with frameset root). r=bz.

--HG--
extra : rebase_source : 84ed582dcec4f32644e549a1030df9b7ee64bb85